# Markov-MyFriend

./: .gitignore  README.md  pyproject.toml  webui.py
src/: cli.py  corpus_loader.py  markov_chain.py  tokenizer.py
